# stock-analyzer-agent

./: .env.example  README.md  REPORT.md  main.py  pyproject.toml
docker/sandbox/: Dockerfile
prompts/: system.py
tests/: conftest.py  test_generate_chart.py  test_parse_number.py  test_python_analyzer.py  test_send_email.py  test_stock_history.py  test_stock_news.py  test_top_gainers.py  test_validate.py
tools/: __init__.py  _playwright_scraper.py  generate_chart.py  python_analyzer.py  send_email.py  stock_history.py  stock_news.py  top_gainers.py  validate.py
