[project]
name = "stock-analyzer-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langfuse>=3.14.5",
    "langgraph>=1.0.9",
    "langsmith>=0.7.7",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "yfinance>=1.2.0",
    "matplotlib>=3.10.0",
    "mplfinance>=0.12.10b0",
]
